--- a/app/deployment.yaml
+++ b/app/deployment.yaml
@@ -1,19 +1,100 @@
+---
+# Source: catalog/templates/mysql-secret.yaml
+apiVersion: v1
+kind: Secret
+metadata:
+  name: catalog-db
+data:
+  username: "Y2F0YWxvZw=="
+  password: "WkI4V1l2dFM5dndVNmlBNQ=="
+---
+# Source: catalog/templates/configmap.yml
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: catalog
+data:
+  DB_ENDPOINT: catalog-mysql:3306
+  DB_READ_ENDPOINT: catalog-mysql:3306
+  DB_NAME: catalog
+---
+# Source: catalog/templates/mysql-service.yaml
+apiVersion: v1
+kind: Service
+metadata:
+  name: catalog-mysql
+  labels:
+    helm.sh/chart: catalog-0.0.1
+    app.kubernetes.io/name: catalog
+    app.kubernetes.io/instance: catalog
+    app.kubernetes.io/component: mysql
+    app.kubernetes.io/managed-by: Helm
+spec:
+  type: ClusterIP
+  ports:
+    - port: 3306
+      targetPort: mysql
+      protocol: TCP
+      name: mysql
+  selector:
+    app.kubernetes.io/name: catalog
+    app.kubernetes.io/instance: catalog
+    app.kubernetes.io/component: mysql
+---
+# Source: catalog/templates/mysql-statefulset.yaml
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: ${APP_NAME}
+  labels:
+    helm.sh/chart: catalog-0.0.1
+    app.kubernetes.io/name: catalog
+    app.kubernetes.io/instance: catalog
+    app.kubernetes.io/component: mysql
+    app.kubernetes.io/managed-by: Helm
 spec:
-  replicas: 2
+  replicas: 1
+  serviceName: ${APP_NAME}
   selector:
     matchLabels:
       app: ${APP_NAME}
+      app.kubernetes.io/name: catalog
+      app.kubernetes.io/instance: catalog
+      app.kubernetes.io/component: mysql
   template:
     metadata:
       labels:
         app: ${APP_NAME}
+        app.kubernetes.io/name: catalog
+        app.kubernetes.io/instance: catalog
+        app.kubernetes.io/component: mysql
     spec:
       containers:
-      - name: app
-        image: "${IMAGE}"
-        ports:
-        - containerPort: 80
+        - name: mysql
+          image: "public.ecr.aws/docker/library/mysql:8.0"
+          imagePullPolicy: IfNotPresent
+          env:
+            - name: MYSQL_ROOT_PASSWORD
+              value: my-secret-pw
+            - name: MYSQL_DATABASE
+              value: catalog
+            - name: MYSQL_USER
+              valueFrom:
+                secretKeyRef:
+                  name: catalog-db
+                  key: username
+            - name: MYSQL_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: catalog-db
+                  key: password
+          volumeMounts:
+            - name: data
+              mountPath: /var/lib/mysql
+          ports:
+            - name: mysql
+              containerPort: 3306
+              protocol: TCP
+      volumes:
+      - name: data
+        emptyDir: {}
