--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -10,5 +10,5 @@ spec:
   type: service
   owner: user:guest
   lifecycle: experimental
-  # dependsOn:
-  #   - crossplane-eks-demo-05
+  dependsOn:
+    - crossplane-eks-demo-05
