--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -11,4 +11,4 @@ spec:
   owner: user:guest
   lifecycle: experimental
   dependsOn:
-    - crossplane-eks-demo-05
+    - resource:crossplane-eks-demo-05
