--- a/app/deployment.yaml
+++ b/app/deployment.yaml
@@ -47,6 +47,7 @@ kind: StatefulSet
 metadata:
   name: ${APP_NAME}
   labels:
+    app: ${APP_NAME}
     helm.sh/chart: catalog-0.0.1
     app.kubernetes.io/name: catalog
     app.kubernetes.io/instance: catalog
